@@ -14,6 +14,14 @@ S <mave> comment goes here
     'B' : means a BugFix
     'C' : means that something has been changed (e.g. implementation of a Class or a signature method)
 ==== End of Legend ====
+    ==> 144 - 4/01/2007 <==
+
+B <mave> bugfix in nnfw-config script generation
+
+    ==> 143 - 4/01/2007 <==
+
++ <mave> added nnfw-config script for Linux users
+
     ==> 142 - 4/01/2007 <==
 
 C <mave> implemented Random::gauss with GSL library
